<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/registerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:viewBindingIgnore="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.todosapp.Views.MessageLayout
            android:id="@+id/messageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            style="@style/LogoImageStyle"
            android:src="@drawable/img_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            style="@style/LogoTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            style="@style/AuthDescriptions"
            android:text="@string/create_your_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutUsername"
            style="@style/AuthInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsername"
                style="@style/AuthInputEditText"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            style="@style/AuthInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutUsername"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                style="@style/AuthInputEditText"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            style="@style/AuthInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmail"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                style="@style/AuthInputEditText"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="12" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutConfirmPassword"
            style="@style/AuthInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutPassword"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPassword"
                style="@style/AuthInputEditText"
                android:hint="@string/ConfirmPassword"
                android:inputType="textPassword"
                android:maxLength="12" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPolicy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineHeight="21dp"
            android:text="@string/agree_with_conditions"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/inputLayoutConfirmPassword"
            app:layout_constraintStart_toStartOf="@+id/inputLayoutConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutConfirmPassword"
            tools:ignore="UnusedAttribute" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            style="@style/AuthButton"
            android:text="@string/Register"
            app:layout_constraintEnd_toEndOf="@+id/tvPolicy"
            app:layout_constraintStart_toStartOf="@+id/tvPolicy"
            app:layout_constraintTop_toBottomOf="@+id/tvPolicy" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
            app:layout_constraintVertical_bias="0.9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_account" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/AuthNavigateButton"
                android:text="@string/log_in" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
