<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvTitleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/primaryColor"
        android:textFontWeight="700"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:boxStrokeColor="@color/lineColor"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1.5dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/Enter_tag_title"
            android:inputType="text|textMultiLine|textCapSentences"
            android:maxLength="30"
            android:minLines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPositive"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:minWidth="72dp"
            android:text="@string/Done" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNegative"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="72dp"
            android:text="@string/Cancel"
            android:textAllCaps="true" />
    </LinearLayout>
</LinearLayout>