<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/findAccountLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Auth.FindAccountFragment"
    tools:viewBindingIgnore="true">

    <com.example.todosapp.Views.MessageLayout
        android:id="@+id/messageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        style="@style/LogoImageStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img_email"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        style="@style/LogoTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        style="@style/AuthDescriptions"
        android:text="@string/enter_your_email"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        style="@style/AuthInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            style="@style/AuthInputEditText"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindAccount"
        style="@style/AuthButton"
        android:text="@string/find_your_account"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutEmail"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmail" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFindAccount"
        app:layout_constraintVertical_bias="0.9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_your_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/AuthNavigateButton"
            android:text="@string/log_in" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>